# Zero-To-Production

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: audit.yaml  general.yaml
configuration/: base.yaml  development.yaml  production.yaml
scripts/: init_database.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/errors/: confirmation_error.rs  helpers.rs  mod.rs  newsletter_error.rs  subscribe_error.rs
src/models/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/templates/: confirmation_email.rs  mod.rs
templates/: confirmation_email.html
tests/: health.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
